# rebar_remote

./: .gitignore  FIX_MOTOR_CONTROL.md  HEADLESS_OPERATION.md  MOTOR_CONTROL_GUIDE.md  README.md  REFACTORING_PLAN.md  ROBOT_CONTROL_ARCHITECTURE.md  camera_troubleshooting.md  cleanup_logs.sh  integrated_control.sh  integrated_control_debug.sh  view_logs.sh
src/ezi_io_ros2/: LIMIT_SENSOR_SETUP.md  README.md  package.xml  setup.cfg  setup.py
src/ezi_io_ros2/config/: ezi_io.yaml
src/ezi_io_ros2/ezi_io_ros2/: __init__.py  ezi_io_node.py
src/ezi_io_ros2/launch/: ezi_io.launch.py
src/pololu_ros2/: README.md  package.xml  setup.cfg  setup.py
src/pololu_ros2/config/: pololu.yaml
src/pololu_ros2/launch/: pololu.launch.py
src/pololu_ros2/pololu_ros2/: __init__.py  pololu_driver.py  pololu_node.py
src/pololu_ros2/resource/: pololu_ros2
src/rebar_control/: IRON_MD_GUIDE.md  IRON_MD_INTEGRATION.md  README.md  package.xml  setup.cfg  setup.py
src/rebar_control/config/: iron_md.yaml  test_params.yaml
src/rebar_control/docs/: JOYSTICK_MAPPING_UPDATE.md
src/rebar_control/launch/: full_system.launch.py  test_driving.launch.py  test_gripper.launch.py  test_stage.launch.py  test_teleop.launch.py
src/rebar_control/rebar_control/: IRON-MD_CAN_Specification.md  IRON_MD_DBC_GUIDE.md  __init__.py  iron_md_joystick.dbc  iron_md_teleop_node.py  safety_monitor.py  teleop_node.py
src/rmd_robot_control/: README.md  package.xml  setup.cfg  setup.py  test_can_connection.py
src/rmd_robot_control/config/: robot_control.yaml
src/rmd_robot_control/launch/: cmd_vel_only.launch.py  gui_control.launch.py  position_only.launch.py  robot_control.launch.py
src/rmd_robot_control/rmd_robot_control/: __init__.py  can_manager.py  cmd_vel_control_node.py  motor_0x144_test.py  motor_controller.py  motor_test.py  position_control_node.py  rmd_x4_protocol.py  robot_control_gui.py  robot_control_node.py  safe_motor_test.py
src/seengrip_ros2/: README.md  package.xml  setup.cfg  setup.py
src/seengrip_ros2/config/: seengrip.yaml
src/seengrip_ros2/launch/: seengrip.launch.py
src/seengrip_ros2/seengrip_ros2/: __init__.py  seengrip_node.py
