<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pololu_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 driver for Pololu Simple Motor Controller (LM2219F-6024-24V-10mm linear actuator)</description>
  <maintainer email="mattwilsonmbw@gmail.com">Matthew Wilson</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/matwilso/pololu_ros</url>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
