<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rebar_control</name>
  <version>0.1.0</version>
  <description>Integrated control system for rebar tying robot</description>
  <maintainer email="koceti@todo.todo">koceti</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rmd_robot_control</depend>
  <depend>pololu_ros2</depend>
  <depend>seengrip_ros2</depend>
  <depend>ezi_io_ros2</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
